--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "Ebook catalog application",
   "main": "dist/server/index.js",
   "dependencies": {
-    "@types/mysql": "0.0.34",
-    "mysql": "^2.14.1"
+    "@types/sqlite3": "^3.1.0",
+    "@types/tmp": "0.0.33",
+    "@types/uuid": "^3.4.0",
+    "sqlite": "^2.8.0",
+    "sqlite3": "^3.1.9",
+    "tmp": "0.0.31",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "@types/chai": "^4.0.2",
+    "@types/chai-as-promised": "0.0.31",
     "@types/mocha": "^2.2.41",
     "chai": "^4.1.0",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^3.5.0",
+    "nyc": "^11.1.0",
     "source-map-loader": "^0.2.1",
     "ts-loader": "^2.3.2",
     "typescript": "^2.4.2"
@@ -26,6 +34,7 @@
     "build": "webpack --config ./webpack/webpack.config.js",
     "build-tests": "webpack --config ./webpack/tests.config.js",
     "test": "mocha ./dist/test --recursive",
-    "build-and-test": "npm run build-tests && npm test"
+    "build-and-test": "npm run build-tests && npm test",
+    "run-server": "node ./dist/server/bundle.js"
   }
 }
