--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/chai": "^4.0.2",
     "@types/chai-as-promised": "0.0.31",
     "@types/mocha": "^2.2.41",
+    "@types/sinon": "^2.3.3",
     "chai": "^4.1.0",
     "chai-as-promised": "^7.1.1",
     "mocha": "^3.5.0",
     "nyc": "^11.1.0",
+    "sinon": "^3.0.0",
     "source-map-loader": "^0.2.1",
     "ts-loader": "^2.3.2",
     "typescript": "^2.4.2"
