--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "@types/sqlite3": "^3.1.0",
     "@types/tmp": "0.0.33",
     "@types/uuid": "^3.4.0",
-    "@types/xml2js": "^0.4.0",
     "fs-extra": "^4.0.1",
+    "libxmljs": "^0.18.7",
     "sqlite": "^2.8.0",
     "sqlite3": "^3.1.9",
     "tmp": "0.0.31",
-    "uuid": "^3.1.0",
-    "xml2js": "^0.4.17"
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "@types/chai": "^4.0.3",
