--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "dist/server/index.js",
   "dependencies": {
     "@types/fs-extra": "^4.0.0",
+    "@types/numeral": "0.0.21",
     "@types/sqlite3": "^3.1.0",
     "@types/tmp": "0.0.33",
     "@types/uuid": "^3.4.0",
     "fs-extra": "^4.0.1",
     "libxmljs": "^0.18.7",
+    "moment": "^2.18.1",
+    "numeral": "^2.0.6",
     "sqlite": "^2.8.0",
     "sqlite3": "^3.1.9",
     "tmp": "0.0.31",
