--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@types/fs-extra": "^4.0.0",
     "@types/numeral": "0.0.21",
+    "@types/restify": "^5.0.1",
+    "@types/restify-errors": "^4.3.2",
     "@types/sqlite3": "^3.1.0",
     "@types/tmp": "0.0.33",
     "@types/uuid": "^3.4.0",
@@ -13,6 +15,8 @@
     "libxmljs": "^0.18.7",
     "moment": "^2.18.1",
     "numeral": "^2.0.6",
+    "restify": "^5.2.0",
+    "restify-errors": "^5.0.0",
     "sqlite": "^2.8.0",
     "sqlite3": "^3.1.9",
     "tmp": "0.0.31",
@@ -30,7 +34,9 @@
     "sinon": "^3.2.0",
     "source-map-loader": "^0.2.1",
     "ts-loader": "^2.3.2",
-    "typescript": "^2.4.2"
+    "typescript": "^2.4.2",
+    "supertest": "^3.0.0",
+    "@types/supertest": "^2.0.2"
   },
   "author": "zenwarr",
   "license": "UNLICENSED",
