--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@types/fs-extra": "^4.0.0",
     "@types/numeral": "0.0.21",
+    "@types/react": "^16.0.5",
+    "@types/react-dom": "^15.5.4",
     "@types/restify": "^5.0.1",
     "@types/restify-errors": "^4.3.2",
     "@types/sqlite3": "^3.1.0",
@@ -15,6 +17,8 @@
     "libxmljs": "^0.18.7",
     "moment": "^2.18.1",
     "numeral": "^2.0.6",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "restify": "^5.2.0",
     "restify-errors": "^5.0.0",
     "sqlite": "^2.8.0",
@@ -36,7 +40,8 @@
     "ts-loader": "^2.3.2",
     "typescript": "^2.4.2",
     "supertest": "^3.0.0",
-    "@types/supertest": "^2.0.2"
+    "@types/supertest": "^2.0.2",
+    "html-webpack-plugin": "^2.30.1"
   },
   "author": "zenwarr",
   "license": "UNLICENSED",
