--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "module": "commonjs",
-    "target": "es6"
+    "target": "es6",
+    "jsx": "react"
   },
   "include": [
     "./src/**/*",
