--- a/package.json
+++ b/package.json
@@ -8,22 +8,27 @@
     "@types/numeral": "0.0.21",
     "@types/react": "^16.0.5",
     "@types/react-dom": "^15.5.4",
+    "@types/react-redux": "^5.0.5",
     "@types/restify": "^5.0.1",
     "@types/restify-errors": "^4.3.2",
     "@types/sqlite3": "^3.1.0",
     "@types/tmp": "0.0.33",
     "@types/uuid": "^3.4.0",
     "fs-extra": "^4.0.1",
+    "immutable": "^3.8.1",
     "libxmljs": "^0.18.7",
     "moment": "^2.18.1",
     "numeral": "^2.0.6",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "restify": "^5.2.0",
     "restify-errors": "^5.0.0",
     "sqlite": "^2.8.0",
     "sqlite3": "^3.1.9",
     "tmp": "0.0.31",
+    "typed-immutable-record": "0.0.6",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
