--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/tmp": "0.0.33",
     "@types/uuid": "^3.4.0",
     "fs-extra": "^4.0.1",
-    "immutable": "^3.8.1",
+    "immutable-assign": "^1.0.36",
     "libxmljs": "^0.18.7",
     "moment": "^2.18.1",
     "numeral": "^2.0.6",
@@ -30,7 +30,6 @@
     "sqlite3": "^3.1.9",
     "superagent": "^3.6.0",
     "tmp": "0.0.31",
-    "typed-immutable-record": "0.0.6",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
