update node modules

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@types/react-redux": "^5.0.5",
     "@types/restify": "^5.0.1",
     "@types/restify-errors": "^4.3.2",
-    "@types/sqlite3": "^3.1.0",
+    "@types/sqlite3": "^3.1.1",
     "@types/superagent": "^3.5.5",
     "@types/tmp": "0.0.33",
-    "@types/uuid": "^3.4.0",
+    "@types/uuid": "^3.4.1",
     "fs-extra": "^4.0.1",
     "immutable-assign": "^1.0.36",
     "libxmljs": "^0.18.7",
@@ -33,21 +33,21 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.3",
+    "@types/chai": "^4.0.4",
     "@types/chai-as-promised": "0.0.31",
-    "@types/mocha": "^2.2.41",
+    "@types/mocha": "^2.2.42",
     "@types/sinon": "^2.3.3",
+    "@types/supertest": "^2.0.3",
     "chai": "^4.1.1",
     "chai-as-promised": "^7.1.1",
+    "html-webpack-plugin": "^2.30.1",
     "mocha": "^3.5.0",
     "nyc": "^11.1.0",
-    "sinon": "^3.2.0",
+    "sinon": "^3.2.1",
     "source-map-loader": "^0.2.1",
-    "ts-loader": "^2.3.2",
-    "typescript": "^2.4.2",
     "supertest": "^3.0.0",
-    "@types/supertest": "^2.0.2",
-    "html-webpack-plugin": "^2.30.1"
+    "ts-loader": "^2.3.4",
+    "typescript": "^2.5.1"
   },
   "author": "zenwarr",
   "license": "UNLICENSED",
