--- a/package.json
+++ b/package.json
@@ -40,11 +40,16 @@
     "@types/supertest": "^2.0.3",
     "chai": "^4.1.1",
     "chai-as-promised": "^7.1.1",
+    "css-loader": "^0.28.5",
+    "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
     "mocha": "^3.5.0",
+    "node-sass": "^4.5.3",
     "nyc": "^11.1.0",
+    "sass-loader": "^6.0.6",
     "sinon": "^3.2.1",
     "source-map-loader": "^0.2.1",
+    "style-loader": "^0.18.2",
     "supertest": "^3.0.0",
     "ts-loader": "^2.3.4",
     "typescript": "^2.5.1"
