--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chai-as-promised": "^7.1.1",
     "css-loader": "^0.28.5",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "mocha": "^3.5.0",
     "node-sass": "^4.5.3",
