--- a/package.json
+++ b/package.json
@@ -4,17 +4,7 @@
   "description": "Ebook catalog application",
   "main": "dist/server/index.js",
   "dependencies": {
-    "@types/fs-extra": "^4.0.0",
-    "@types/numeral": "0.0.21",
-    "@types/react": "^16.0.5",
-    "@types/react-dom": "^15.5.4",
-    "@types/react-redux": "^5.0.5",
-    "@types/restify": "^5.0.1",
-    "@types/restify-errors": "^4.3.2",
-    "@types/sqlite3": "^3.1.1",
-    "@types/superagent": "^3.5.5",
-    "@types/tmp": "0.0.33",
-    "@types/uuid": "^3.4.1",
+    "better-sqlite3": "^4.0.2",
     "fs-extra": "^4.0.1",
     "immutable-assign": "^1.0.36",
     "libxmljs": "^0.18.7",
@@ -26,18 +16,27 @@
     "redux": "^3.7.2",
     "restify": "^5.2.0",
     "restify-errors": "^5.0.0",
-    "sqlite": "^2.8.0",
-    "sqlite3": "^3.1.9",
     "superagent": "^3.6.0",
     "tmp": "0.0.31",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^3.1.2",
     "@types/chai": "^4.0.4",
     "@types/chai-as-promised": "0.0.31",
+    "@types/fs-extra": "^4.0.0",
     "@types/mocha": "^2.2.42",
+    "@types/numeral": "0.0.21",
+    "@types/react": "^16.0.5",
+    "@types/react-dom": "^15.5.4",
+    "@types/react-redux": "^5.0.5",
+    "@types/restify": "^5.0.1",
+    "@types/restify-errors": "^4.3.2",
     "@types/sinon": "^2.3.3",
+    "@types/superagent": "^3.5.5",
     "@types/supertest": "^2.0.3",
+    "@types/tmp": "0.0.33",
+    "@types/uuid": "^3.4.1",
     "chai": "^4.1.1",
     "chai-as-promised": "^7.1.1",
     "css-loader": "^0.28.5",
