--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
     "strictNullChecks": true,
     "module": "commonjs",
     "target": "es6",
-    "jsx": "react",
-    "lib": ["ES2017"]
+    "jsx": "react"
   },
   "include": [
     "./src/**/*",
